# fastapi-sample

./: .env.example  .gitignore  README.md  auth.py  main.py  openapi.json  openapi_config.py  pyproject.toml  requirements.txt  ssfs.py  users.py
app/: main.py
app/core/: dependencies.py
app/routers/: items.py  tools.py
app/schemas/: items.py  tools.py
app/services/: items_repo.py
app/tools/: add.py  echo.py  registry.py
auth_methods/: auth.py
dependencies/: auth.py
dev/: routes.py
endpoints/: cars.py  users.py
routers/: tools.py
schemas/: cars.py  tools.py  users.py
scripts/: validate_openapi.py
ssfs/: openapi_loader.py  routes.py
tests/: routes.py  test_ssfs.py
utils/: users.py
